--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ pages:
   stage: deploy
   script:
   - mkdir .public
-  - cp -r dist/index.html dist/fonts .public
+  - cp -r dist/index.html dist/fonts templates/logo.png .public
   - mv .public public
   artifacts:
     paths:
