--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "gruntfile.js",
   "devDependencies": {
     "grunt": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-webfont": "^1.6.0"
   },
   "scripts": {
