--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,7 @@ pages:
   stage: deploy
   script:
   - mkdir .public
-  - cp -r dist/index.html dist/fonts .public
-  - cp -r templates/logo.png public
+  - cp -r dist/index.html dist/fonts dist/images/ .public
   - mv .public public
   artifacts:
     paths:
