Build a son file with all file names for easier implementation in demo page in EOS
On top of that, add contributors info into package.json

--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "eos-icons",
   "version": "1.0.0",
   "description": "The iconic font made for EOS Design System to work together with Material Icons. Extends the library for SUSE and open SUSE product specific usage.",
-  "main": "gruntfile.js",
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-webfont": "^1.6.0"
   },
   "scripts": {
-    "build": "echo \"Error: no test specified\" && exit 1"
+    "build": "grunt"
   },
   "repository": {
     "type": "git",
@@ -22,6 +21,25 @@
     "icons"
   ],
   "author": "SUSE UX/UI team",
+  "contributors": [{
+    "name": "Cynthia Sanchez",
+    "web": "https://de.linkedin.com/in/cyntsanchez"
+  }, {
+    "name": "Jesus Herman",
+    "web": "https://www.linkedin.com/in/jesusherman"
+  }, {
+    "name": "Zvezdana Marjanovic",
+    "web": "https://www.linkedin.com/in/zvezdana-marjanovic-5375b251"
+  }, {
+    "name": "Manuele Carlini",
+    "web": "https://www.linkedin.com/in/manuelecarlini"
+  }, {
+    "name": "Kenneth Wimer",
+    "web": "https://www.linkedin.com/in/kennethwimer"
+  }, {
+    "name": "Richa Bishts",
+    "web": "https://www.linkedin.com/in/richabisht"
+  }],
   "license": "MIT",
   "bugs": {
     "url": "https://gitlab.com/SUSE-UIUX/eos-icons/issues"
