--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "eos-icons",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "The iconic font made for EOS Design System to work together with Material Icons. Extends the library for SUSE and open SUSE product specific usage.",
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-webfont": "^1.6.0"
+    "grunt-webfont": "^1.6.0",
+    "semantic-release": "^15.1.3",
+    "@semantic-release/gitlab": "^2.1.2"
   },
   "scripts": {
     "build": "grunt"
@@ -21,25 +23,32 @@
     "icons"
   ],
   "author": "SUSE UX/UI team",
-  "contributors": [{
-    "name": "Cynthia Sanchez",
-    "web": "https://de.linkedin.com/in/cyntsanchez"
-  }, {
-    "name": "Jesus Herman",
-    "web": "https://www.linkedin.com/in/jesusherman"
-  }, {
-    "name": "Zvezdana Marjanovic",
-    "web": "https://www.linkedin.com/in/zvezdana-marjanovic-5375b251"
-  }, {
-    "name": "Manuele Carlini",
-    "web": "https://www.linkedin.com/in/manuelecarlini"
-  }, {
-    "name": "Kenneth Wimer",
-    "web": "https://www.linkedin.com/in/kennethwimer"
-  }, {
-    "name": "Richa Bishts",
-    "web": "https://www.linkedin.com/in/richabisht"
-  }],
+  "contributors": [
+    {
+      "name": "Cynthia Sanchez",
+      "web": "https://de.linkedin.com/in/cyntsanchez"
+    },
+    {
+      "name": "Jesus Herman",
+      "web": "https://www.linkedin.com/in/jesusherman"
+    },
+    {
+      "name": "Zvezdana Marjanovic",
+      "web": "https://www.linkedin.com/in/zvezdana-marjanovic-5375b251"
+    },
+    {
+      "name": "Manuele Carlini",
+      "web": "https://www.linkedin.com/in/manuelecarlini"
+    },
+    {
+      "name": "Kenneth Wimer",
+      "web": "https://www.linkedin.com/in/kennethwimer"
+    },
+    {
+      "name": "Richa Bishts",
+      "web": "https://www.linkedin.com/in/richabisht"
+    }
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://gitlab.com/SUSE-UIUX/eos-icons/issues"
