add configuration to use ESlint conventions for version creation

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -6,3 +6,18 @@ publish:
   - '@semantic-release/gitlab'
 success: false
 fail: false
+analyzeCommits:
+  preset: 'eslint'
+  releaseRules:
+    -
+      tag: 'Breaking'
+      release: 'major'
+    -
+      tag: 'Fix'
+      release: 'patch'
+    -
+      tag: 'Update'
+      release: 'minor'
+    -
+      tag: 'New'
+      release: 'minor'
