--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "description": "The iconic font made for EOS Design System to work together with Material Icons. Extends the library for SUSE and open SUSE product specific usage.",
   "devDependencies": {
+    "@semantic-release/gitlab": "^2.1.2",
+    "conventional-changelog-eslint": "^1.0.9",
     "grunt": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-webfont": "^1.6.0",
-    "semantic-release": "^15.1.3",
-    "@semantic-release/gitlab": "^2.1.2"
+    "semantic-release": "^15.1.3"
   },
   "scripts": {
     "build": "grunt"
