Update package.json adding Sorin to the project

--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
     {
       "name": "Richa Bishts",
       "web": "https://www.linkedin.com/in/richabisht"
+    },
+    {
+      "name": "Sorin Curescu",
+      "web": "https://www.linkedin.com/in/en3sis"
     }
   ],
   "license": "MIT",
