update Jesus Linkedin URL

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     },
     {
       "name": "Jesus Herman",
-      "web": "https://www.linkedin.com/in/jesusherman"
+      "web": "https://www.linkedin.com/in/jesushermanmarina/"
     },
     {
       "name": "Zvezdana Marjanovic",
