--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
   "bugs": {
     "url": "https://gitlab.com/SUSE-UIUX/eos-icons/issues"
   },
-  "homepage": "https://gitlab.com/SUSE-UIUX/eos-icons#README"
+  "homepage": "https://gitlab.com/SUSE-UIUX/eos-icons#README",
+  "dependencies": {
+    "grunt-text-replace": "^0.4.0"
+  }
 }
