add the entire dist directory to the demo in CI and include the right path in demo page

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ pages:
   stage: deploy
   script:
     - mkdir .public
-    - cp -r dist/css dist/index.html dist/fonts dist/images/ .public
+    - cp -r dist/ .public
     - mv .public public
   environment:
     name: production
