--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,8 @@ deploy_wip:
     - apt-get install -y ruby-dev
     - gem install dpl
     - dpl --provider=heroku --app=eos-icons --api-key=$HEROKU_DEMO_PAGE_KEY
+  only:
+    - new_branch_name_here
 
 pages:
   stage: deploy
