--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "@semantic-release/git": "^5.0.0",
     "@semantic-release/gitlab": "^2.1.4",
     "conventional-changelog-eslint": "^1.0.9",
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
     "grunt": "^1.0.3",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-eslint": "^21.0.0",
     "grunt-sass": "^3.0.1",
+    "grunt-sass-lint": "^0.2.4",
     "grunt-webfont": "^1.7.2",
     "node-sass": "^4.9.3",
     "semantic-release": "^15.9.12"
