--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-eslint": "^21.0.0",
+    "grunt-html-validate": "^0.4.4",
     "grunt-sass": "^3.0.1",
     "grunt-sass-lint": "^0.2.4",
     "grunt-webfont": "^1.7.2",
+    "html-validate": "^1.1.0",
     "node-sass": "^4.9.3",
     "semantic-release": "^15.9.12"
   },
