--- a/NEW/vendors-landing/package.json
+++ b/NEW/vendors-landing/package.json
@@ -1,19 +1,13 @@
 {
   "dependencies": {
-    "animate.css": "^3.7.0",
     "bootstrap": "^4.3.1",
     "eos-icons": "^2.0.1",
     "jquery": "^2.0.0",
-    "js-cookie": "^2.2.0",
-    "material-design-icons": "^3.0.1",
-    "wowjs": "^1.1.3"
+    "material-design-icons": "^3.0.1"
   },
   "mainfiles": {
     "jquery": [
       "/dist/jquery.min.js"
-    ],
-    "animate.css": [
-      "/animate.min.css"
     ],
     "bootstrap": [
       "/dist/css/bootstrap.min.css",
@@ -27,9 +21,6 @@
       "/dist/fonts/eos-icons.woff",
       "/dist/fonts/eos-icons.woff2"
     ],
-    "js-cookie": [
-      "/src/js.cookie.js"
-    ],
     "material-design-icons": [
       "/iconfont/MaterialIcons-Regular.eot",
       "/iconfont/MaterialIcons-Regular.ijmap",
@@ -38,9 +29,6 @@
       "/iconfont/MaterialIcons-Regular.woff",
       "/iconfont/MaterialIcons-Regular.woff2",
       "/iconfont/material-icons.css"
-    ],
-    "wowjs": [
-      "/dist/wow.min.js"
     ]
   }
 }
