refactor scripts to run server and build

--- a/NEW/package.json
+++ b/NEW/package.json
@@ -14,6 +14,7 @@
     "postinstall": "npm run build:vendors",
     "prestart": "npm run check:engine-versions",
     "start": "./bin/npm-start",
+    "serve": "./bin/run-python-server",
     "check:engine-versions": "node ./modules/version-check.js",
     "build:all-assets": "npm run build:css & npm run build:js & npx gulp pugToHtml & npx gulp moveMultimedia",
     "build:vendors": "./bin/build-vendors",
@@ -23,7 +24,6 @@
     "watch:css": "./bin/watch-css",
     "watch:fe-js": "./bin/watch-fe-js",
     "watch:pug": "./bin/watch-pug",
-    "browsersync": "browser-sync start --proxy localhost:3000 --files='assets/stylesheets/*.css', 'views/**/*.pug'  --no-notify",
     "test:all": "npm run test:sass && npm run test:pug && npm run test:js && npm run test:unit",
     "test:sass": "sass-lint -v -q",
     "test:pug": "pug-lint -c tests/.pug-lintrc.json **/*.pug .",
