separete files to serve linux or mac independently

--- a/NEW/package.json
+++ b/NEW/package.json
@@ -14,7 +14,8 @@
     "postinstall": "npm run build:vendors",
     "prestart": "npm run check:engine-versions",
     "start": "./bin/npm-start",
-    "serve": "./bin/run-python-server",
+    "serve-macos": "./bin/serve-macos",
+    "serve-linux": "./bin/serve-linux",
     "check:engine-versions": "node ./modules/version-check.js",
     "build:all-assets": "npm run build:css & npm run build:js & npx gulp pugToHtml & npx gulp moveMultimedia",
     "build:vendors": "./bin/build-vendors",
