--- a/NEW/package.json
+++ b/NEW/package.json
@@ -13,8 +13,8 @@
   "scripts": {
     "postinstall": "npm run build:vendors",
     "start": "./bin/npm-start",
-    "serve-macos": "./bin/serve-macos",
-    "serve-linux": "./bin/serve-linux",
+    "serve:macos": "./bin/serve-macos",
+    "serve:linux": "./bin/serve-linux",
     "build:all-assets": "npm run build:css & npm run build:js & npx gulp pugToHtml & npx gulp moveMultimedia",
     "build:vendors": "./bin/build-vendors",
     "build:css": "./bin/build-css",
