--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.3",
   "description": "The iconic font made for EOS Design System to work together with Material Icons. Extends the library for SUSE and open SUSE product specific usage.",
   "eslintIgnore": [
-    "/vendors-landing/*"
+    "/vendors/*"
   ],
   "sasslintConfig": "tests/.sass-lint.yml",
   "engines": {
