--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "postinstall": "npm run build:vendors",
-    "start": "./bin/npm-start && npm run move:json",
+    "start": "./bin/npm-start",
     "serve:macos": "./bin/serve-macos",
     "serve:linux": "./bin/serve-linux",
     "build:all-assets": "npm run build:css & npm run build:js & npx gulp pugToHtml & npx gulp moveMultimedia",
