--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "uglify-js": "3.1.10"
   },
   "devDependencies": {
+    "@babel/plugin-transform-async-to-generator": "^7.7.4",
     "@semantic-release/git": "^5.0.0",
     "@semantic-release/gitlab": "^2.1.2",
     "browser-sync": "^2.26.3",
@@ -65,6 +66,7 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
+    "gulp-remote-src": "^0.4.4",
     "jsdom": "^11.12.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^5.2.0",
