--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "jsdom-global": "^3.0.2",
     "mocha": "^5.2.0",
     "mocha-headless-chrome": "^2.0.1",
+    "nodemon": "^2.0.2",
     "pug-lint": "2.5.0",
     "sass-lint": "^1.12.1",
     "semantic-release": "^15.13.1",
