--- a/eos-icons-react/package.json
+++ b/eos-icons-react/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "eos-icons": "^3.1.0",
     "node-sass": "^4.13.1",
+    "prismjs": "^1.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
