--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -1,7 +1,7 @@
 options:
   formatter: stylish
 files:
-  include: "assets/stylesheets/**/*.s+(a|c)ss"
+  include: "src/assets/scss/**/*.s+(a|c)ss"
 rules:
   # Extends
   extends-before-mixins: 2
