--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.3.0"
+  },
+  "devDependencies": {
     "sass-lint": "^1.12.1"
   },
   "scripts": {
