--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "3.3.0"
   },
   "devDependencies": {
+    "prettier-standard": "^16.2.1",
     "sass-lint": "^1.12.1"
   },
   "scripts": {
@@ -25,7 +26,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "test:sass": "sass-lint -v -q"
+    "test:sass": "sass-lint -v -q",
+    "format": "prettier-standard --lint --format"
   },
   "eslintConfig": {
     "extends": "react-app"
