Add ci test script for js

--- a/package.json
+++ b/package.json
@@ -27,17 +27,14 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "test:sass": "sass-lint -v -q",
-    "format": "prettier-standard --lint --format"
+    "format": "prettier-standard --lint --format",
+    "test:js": "prettier-standard --lint --check"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
