--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0",
+    "husky": "^4.2.5",
     "prettier-standard": "^16.2.1",
     "sass-lint": "^1.12.1"
   },
@@ -45,6 +46,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run test:js && npm run format"
+    }
   },
   "keywords": [
     "iconic",
