--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test:js && npm run format"
+      "pre-commit": "npm run format && npm run test:js"
     }
   },
   "keywords": [
