--- a/package.json
+++ b/package.json
@@ -21,7 +21,14 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-standard": "^4.0.1",
     "husky": "^4.2.5",
     "prettier-standard": "^16.2.1",
     "sass-lint": "^1.12.1"
@@ -32,8 +39,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "test:sass": "sass-lint -v -q",
-    "format": "prettier-standard --lint --format",
-    "test:js": "eslint -c .eslintrc.yml --ignore-pattern *.min.js src/"
+    "format": "prettier-standard --format",
+    "js:fix": "eslint -c .eslintrc.yml src/ --fix",
+    "test:js": "eslint -c .eslintrc.yml src/"
   },
   "browserslist": {
     "production": [
