--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prismjs": "^1.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-gtm-module": "^2.0.8",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
