--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^16.12.0",
     "react-gtm-module": "^2.0.8",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "^3.4.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -31,7 +31,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^4.2.5",
-    "prettier-standard": "^16.2.1",
+    "prettier-standard": "^16.3.0",
     "sass-lint": "^1.12.1"
   },
   "scripts": {
