--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "printWidth": 80,
   "singleQuote": true,
   "jsxSingleQuote": true,
-  "semicolons": false
+  "semi": false,
+  "trailingComma": none
 }
