--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^4.13.1",
     "prismjs": "^1.19.0",
     "react": "^16.12.0",
+    "react-color": "^2.18.1",
     "react-dom": "^16.12.0",
     "react-gtm-module": "^2.0.8",
     "react-router-dom": "^5.1.2",
