--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "eos-icons": "^4.3.0",
+    "i": "^0.3.6",
     "js-cookie": "^2.2.1",
     "node-sass": "^4.13.1",
+    "npm": "^6.14.7",
     "prismjs": "^1.19.0",
     "react": "^16.12.0",
     "react-color": "^2.18.1",
     "react-dom": "^16.12.0",
     "react-gtm-module": "^2.0.8",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0"
+    "react-scripts": "^3.4.0",
+    "react-svg": "^11.0.33"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
