Fix: tidy colors a bit and add format and linter fix to pre-hook

--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test:sass && npm run test:js"
+      "pre-commit": "npm run format && npm run js:fix && npm run test:sass && npm run test:js"
     }
   },
   "keywords": [
