--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.21.2",
     "eslint-plugin-standard": "^4.0.1",
+    "gh-pages": "^3.2.0",
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
     "sass-lint": "^1.12.1"
@@ -47,7 +48,9 @@
     "test:sass": "sass-lint -v -q",
     "format": "prettier --write .",
     "js:fix": "eslint src/ --fix",
-    "test:js": "eslint src/"
+    "test:js": "eslint src/",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
