--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.0",
   "description": "The open source iconic font made for EOS Design System to work together with Material Icons.",
   "private": false,
-  "homepage": "https://test.eos-icons.com",
+  "homepage": "https://www.eos-icons.com",
   "dependencies": {
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^4.2.4",
@@ -78,10 +78,10 @@
   "author": "SUSE UX/UI team",
   "license": "MIT",
   "bugs": {
-    "url": "https://gitlab.com/SUSE-UIUX/eos-icons-landing/issues"
+    "url": "https://github.com/EOS-uiux-Solutions/eos-icons-landing/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@gitlab.com/SUSE-UIUX/eos-icons-landing.git"
+    "url": "git@github.com:EOS-uiux-Solutions/eos-icons-landing.git"
   }
 }
