--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,9 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [14.x]
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout repository code
+        uses: actions/checkout@v2
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -18,20 +20,26 @@ jobs:
 
       - name: Install Packages
         run: npm install
-      - name: create config.json
-        run: "echo '${{ secrets.CONFIG_JSON }}' > src/config.json"
+
       - name: test_lints_sass
         run: npm run test:sass
+
       - name: test_lints_js
         run: npm run test:js
-      - name: update eos-npm
-        run: npm update eos-icons
-      - name: Build page
-        run: npm run build
-      - name: copy index to 404
-        run: cp public/index.html public/404.html
+
+      - name: Build the page
+        run: |
+          "echo '$CONFIG_JSON' > src/config.json"
+          npm update eos-icons
+          npm run build
+          cp build/index.html build/404.html
+        env:
+          CONFIG_JSON: ${{ secrets.CONFIG_JSON }}
+
       - name: Deploy to gh-pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          publish_dir: ./build
+        uses: s0/git-publish-subdir-action@develop
+        env:
+          REPO: self
+          BRANCH: gh-pages
+          FOLDER: build
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
