--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "react-toastify": "^8.2.0",
     "react-svg": "^11.0.41"
   },
   "devDependencies": {
