--- a/src/config.example.json
+++ b/src/config.example.json
@@ -1,5 +1,5 @@
 {
   "GTM": "Your GTM",
-  "ICON_PICKER_API_URL": "Your API URL",
+  "ICON_PICKER_API_URL": "http://localhost:3131/",
   "SHOW_THEME_SWITCH": "boolean"
 }
