--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-  "printWidth": 80,
-  "singleQuote": true,
-  "jsxSingleQuote": true,
-  "semi": false,
-  "trailingComma": none
+  'printWidth': 80,
+  'singleQuote': true,
+  'jsxSingleQuote': true,
+  'semi': false,
+  'trailingComma': none
 }
