--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-svg": "^11.0.41",
+    "react-toast-notifications": "^2.5.1",
+    "react-toastify": "^8.2.0",
     "sass": "^1.49.9"
   },
   "devDependencies": {
