--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.13.1",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-svg": "^11.0.41",
